// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventRepository findById should find event by id 1`] = `
{
  "queryParameters": {
    "id": "event-1",
  },
  "queryString": "SELECT "event"."id" AS "event_id", "event"."name" AS "event_name", "event"."currency_id" AS "event_currency_id", "event"."pin_code" AS "event_pin_code", "event"."created_at" AS "event_created_at", "event"."updated_at" AS "event_updated_at", "event"."deleted_at" AS "event_deleted_at" FROM "event" "event" WHERE "event"."id" = :id",
}
`;

exports[`EventRepository findById should find event by id with pessimistic_write lock 1`] = `
{
  "queryParameters": {
    "id": "event-1",
  },
  "queryString": "SELECT "event"."id" AS "event_id", "event"."name" AS "event_name", "event"."currency_id" AS "event_currency_id", "event"."pin_code" AS "event_pin_code", "event"."created_at" AS "event_created_at", "event"."updated_at" AS "event_updated_at", "event"."deleted_at" AS "event_deleted_at" FROM "event" "event" WHERE "event"."id" = :id FOR UPDATE",
}
`;

exports[`EventRepository findById should return null for non-existent event 1`] = `
{
  "queryParameters": {
    "id": "non-existent",
  },
  "queryString": "SELECT "event"."id" AS "event_id", "event"."name" AS "event_name", "event"."currency_id" AS "event_currency_id", "event"."pin_code" AS "event_pin_code", "event"."created_at" AS "event_created_at", "event"."updated_at" AS "event_updated_at", "event"."deleted_at" AS "event_deleted_at" FROM "event" "event" WHERE "event"."id" = :id",
}
`;

exports[`EventRepository insert should insert event correctly 1`] = `
{
  "queryParameters": {
    "orm_param_0": "event-1",
    "orm_param_1": "Test Event",
    "orm_param_2": "currency-1",
    "orm_param_3": "1234",
    "orm_param_4": 2023-01-01T00:00:00.000Z,
    "orm_param_5": 2023-01-01T00:00:00.000Z,
    "orm_param_6": null,
  },
  "queryString": "INSERT INTO "event" AS "EventEntity"("id", "name", "currency_id", "pin_code", "created_at", "updated_at", "deleted_at") VALUES (:orm_param_0, :orm_param_1, :orm_param_2, :orm_param_3, :orm_param_4, :orm_param_5, :orm_param_6)",
}
`;

exports[`EventRepository update should update event correctly 1`] = `
{
  "queryParameters": {
    "id": "event-1",
    "orm_param_0": 2023-01-02T00:00:00.000Z,
    "orm_param_1": 2023-01-02T00:00:00.000Z,
  },
  "queryString": "UPDATE "event" SET "deleted_at" = :orm_param_0, "updated_at" = :orm_param_1 WHERE "id" = :id",
}
`;
